Add jdk25 support